@@ -3,6 +3,7 @@ Rosario Student Information System - CHANGES
 Changes in 2.8.23
 -----------------
 - Go button display when no Edit Allowed in Calendar.php
+- Format Events List descriptions in Calendar.php
 
 Changes in 2.8.22
 -----------------
